# linetok

./: .editorconfig  .env  .env-storage  .env.example  .eslintrc.json  .gitignore  README.md  declarations.d.ts  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/: .env  .env.example  .gitignore  Dockerfile  Pipfile  README.md  linetok.db  pyproject.toml  requirements.txt  run.py  runserver.py
backend/src/: __init__.py  conftest.py  main.py
backend/src/api/: routers.py
backend/src/api/_auth/: router.py
backend/src/api/auth/: __init__.py  model.py  router.py
backend/src/api/categories/: __init__.py  router.py
backend/src/api/category/: __init__.py  model.py  router.py
backend/src/api/parameter/: __init__.py  router.py
backend/src/api/parameters/: __init__.py  router.py
backend/src/api/product/: __init__.py  model.py  router.py  router_fiels.py
backend/src/api/products/: __init__.py  router.py
backend/src/api/user/: __init__.py  model.py  route.py  router.py  schemas.py
backend/src/common/: crud.py  dependencies.py  exceptions.py
backend/src/common/config/: __init__.py  database.py  settings.py
backend/src/common/database/: __init__.py  postgresql_connector.py  postgresql_service.py
backend/src/common/dependencies/: __init__.py  get_current_user.py  get_settings.py
backend/src/common/models/: __init__.py  base.py  category.py  parameter.py  product.py  token.py  user.py
backend/src/common/schemas/: __init__.py  base.py  category.py  (+3 more)
backend/src/core/: __init__.py  constans.py  constants.py  db.py  user_model.py
(+271 files in other folders)
