[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Makar <bialiauski@protonmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"
python-dotenv = "^0.21.0"
SQLAlchemy = "^1.4.41"
passlib = "^1.7.4"
email-validator = "^1.3.0"
python-multipart = "^0.0.5"
asyncpg = "^0.26.0"
greenlet = "^1.1.3"
install = "^1.3.5"
fastapi-jwt-auth = "^0.5.0"
bcrypt = "^4.0.0"

[tool.poetry.scripts]
app = "run:start_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
